force-app/main/default/objects/Account/fields/HS_Content_Changed__c.field-meta.xml
<CustomField>
    <fullName>HS_Content_Changed__c</fullName>
    <description
  >When a MAPPED field on this record last actually changed in Salesforce. Stamped by the before-trigger, never by the sync engine's own status DML -- which is why LastModifiedDate cannot be used for this. It is the Salesforce side of the inbound newest-modified-wins comparison for Bidirectional fields.</description>
    <label>HS Content Changed</label>
    <type>DateTime</type>
</CustomField>