force-app/main/default/objects/Account/fields/HS_Portal_Changed__c.field-meta.xml
<CustomField>
    <fullName>HS_Portal_Changed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set when Portal__c actually changed, so the outbox archives the record from the portals it left. Cleared once synced.</description>
    <label>HS Portal Changed</label>
    <type>Checkbox</type>
</CustomField>