force-app/main/default/objects/Account/fields/HS_Retry_Count__c.field-meta.xml
<CustomField>
    <fullName>HS_Retry_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of failed sync attempts. Retried until it hits MAX_RETRIES, then left for manual review.</description>
    <label>HS Retry Count</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>