force-app/main/default/objects/Account/fields/HS_Sync_Status__c.field-meta.xml
<CustomField>
    <fullName>HS_Sync_Status__c</fullName>
    <description>Outbox status for the HubSpot portal sync: Pending / Processing / Synced / Failed.</description>
    <label>HS Sync Status</label>
    <length>40</length>
    <type>Text</type>
</CustomField>